--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "prettier": "^3.1.1"
   }
 }
